<resources>
    <string name="app_name">Mobify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mobify</string>
    <string name="nav_header_subtitle">pabloboocastrofeito@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_training_plans">Goals</string>
    <string name="quick_mobility_test_introduction">Welcome to the Quick Mobility Check! This quick assessment will help you identify areas of your body that may need more attention in terms of flexibility and mobility.\nYou’ll be guided through a series of simple exercises that test the mobility of your hips, hamstrings, shoulders, and posture. Each exercise is easy to perform and only takes a few minutes. Based on your results, we’ll recommend the most suitable flexibility and mobility goals for you to focus on.\n\nLet’s get started and discover how you can improve your movement and overall well-being!</string>
    <string name="quick_mobility_test">Quick mobility test</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="app_introduction">Welcome to Mobify, your personalized mobile app designed to enhance your flexibility and mobility. Whether you\'re aiming to overcome stiffness, improve your range of motion, or achieve specific fitness goals, Mobify offers tailored training programs and routines just for you. Start by identifying your areas of improvement, set your goals, and let Mobify guide you through a step-by-step journey to better movement. With easy-to-follow exercises, progress tracking, and daily reminders, Mobify is here to support your path to a more flexible and active lifestyle. Unlock your full potential with Mobify!</string>
    <string name="start_test">Start test</string>
    <string name="quick_mobility_test_onboarding_options_description">Do you want to choose your goals or perform a quick mobility check if you are not clear about them?</string>
    <string name="choose_goals">Choose goals</string>
    <string name="select_goals_title">Select between 1 and 3 goals</string>
    <string name="save">Save</string>
    <string name="next_side">Next side</string>
    <string name="exercise">Exercise</string>
    <string name="back">Back</string>
    <string name="minimum_goals_selection_error">You have to select at least 1 goal</string>
    <string name="maximum_goals_selection_error">You can only select up to 3 goals</string>
    <string name="language_title">Language of the app</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="select_exercise_days">Select exercise days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="exercise_reminder_title">Time to exercise!</string>
    <string name="exercise_reminder_text">Remember to do your mobility routine.</string>
    <string name="change_exercise_days">Change exercise days</string>
    <string name="switch_theme">Switch app theme</string>
    <string name="day_not_unlocked_error">Complete the previous day first</string>
    <string name="notification_permission_title">Required notification permissions</string>
    <string name="notification_permission_message">We need your permission to send notifications. Please enable notifications on the next screen.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="votes_for_your_flexibility">Votes for your flexibility</string>
    <string name="current_streak">Current streak</string>
    <string name="longest_streak">Longest streak</string>
    <string name="your_data">YOUR DATA</string>
    <string name="menu_profile">Profile</string>
    <string name="hip_rotation_test">Hip rotation test</string>
    <string name="hip_rotation_test_description">Sit on the floor with your legs extended in front of you. Slowly rotate your leg inward and then outward while keeping your torso straight.</string>
    <string name="hip_rotation_test_response_easy">Full range of motion with ease</string>
    <string name="hip_rotation_test_response_medium">Some difficulty rotating</string>
    <string name="hip_rotation_test_response_hard">Unable to rotate fully</string>
    <string name="forward_bend_test">Forward Bend Test</string>
    <string name="forward_bend_test_description">Stand with your feet together and slowly bend forward at the hips, trying to touch your toes without bending your knees.</string>
    <string name="forward_bend_test_response_easy">Can easily touch my toes</string>
    <string name="forward_bend_test_response_medium">Can reach just above my toes</string>
    <string name="forward_bend_test_response_hard">Cannot reach my toes</string>
    <string name="behind_the_back_reach_test">Behind-the-Back reach test</string>
    <string name="behind_the_back_reach_test_description">Reach one hand over your shoulder and the other hand behind your back, trying to make your hands touch.</string>
    <string name="behind_the_back_reach_test_response_easy">Hands can easily touch</string>
    <string name="behind_the_back_reach_test_response_medium">Hands are close but not touching</string>
    <string name="behind_the_back_reach_test_response_hard">Hands are far apart</string>
    <string name="wall_extension_test">Wall Extension Test</string>
    <string name="wall_extension_test_description">Stand with your heels, back, and head against a wall. Try to lift your arms overhead without moving your head or back away from the wall.</string>
    <string name="wall_extension_test_response_easy">Can fully extend arms without losing contact</string>
    <string name="wall_extension_test_response_medium">Some difficulty maintaining contact</string>
    <string name="wall_extension_test_response_hard">Cannot fully extend arms without losing contact</string>
    <string name="quick_mobility_test_no_recommendation">Based on your results, we haven\'t been able to determine a clear recommendation since you scored the same on three or more exercises, feel free to choose the objective that best suits your preferences.</string>
    <string name="quick_mobility_test_results">Based on your results, we recommend focusing on</string>
    <string name="and">and</string>
    <string name="hip_mobility">Hip mobility</string>
    <string name="hamstring_flexibility">Hamstring flexibility</string>
    <string name="shoulder_mobility">Shoulder mobility</string>
    <string name="posture_mobility">Posture mobility</string>
    <string name="improve_squat">Improve squat</string>
    <string name="office_worker_daily_mobility">Office worker daily mobility</string>
    <string name="beginner_fullbody_flexibility">Beginner fullbody flexibility</string>
    <string name="beginner_upper_lower_flexibility">Beginner upper-lower flexibility</string>
    <string name="toe_touching">Toe touching</string>
    <string name="thirty_day_pancake_with_pnf_and_loaded_stretching">30 day pancake with PNF and loaded stretching</string>
    <string name="hip_mobility_description">This training plan will help you improve your hip mobility. It is designed to do three workouts per week for four weeks.</string>
    <string name="hamstring_flexibility_description">This training plan will help you improve your hamstring flexibility. It is designed to do three workouts per week for four weeks.</string>
    <string name="shoulder_mobility_description">This training plan will help you improve your shoulder mobility. It is designed to do three workouts per week for four weeks.</string>
    <string name="posture_mobility_description">This training plan will help you improve your posture and spinal mobility. It is designed to do three workouts per week for four weeks.</string>
    <string name="improve_squat_description">This training plan will help you improve your squat. Do a workout before your squat or squat pattern training.</string>
    <string name="office_worker_daily_mobility_description">This mobility plan is designed for individuals who spend long hours sitting and are looking to improve the flexibility and health of their quads, hips, shoulders, and back. In just 8 minutes a day, 3-4 times per week, these targeted exercises help to relieve muscle tension, improve posture, and prevent common aches associated with a sedentary lifestyle. Perfect for incorporating into your daily routine, this plan helps maintain overall mobility and physical well-being.</string>
    <string name="beginner_fullbody_flexibility_description">This full-body flexibility plan is designed for beginners to improve flexibility and mobility throughout the entire body.\nIt is recommended to perform this routine 3 to 4 times per week.\nYou shouldn’t feel pain during the stretches, but discomfort is okay. Always breathe deeply and focus on gradually increasing your range of motion over time.</string>
    <string name="beginner_upper_lower_flexibility_description">This plan is ideal for beginners who want to work on flexibility with a focus on specific areas of the body. The upper-lower split routine allows you to alternate between days targeting the upper body and lower body, which helps to break down the stretches into manageable sessions while focusing on flexibility gains.\nPerform the upper body routine one day and the lower body routine the next, alternating between the two. Aim to do this routine 3 to 4 times a week.\nYou shouldn’t feel pain during the stretches, but discomfort is okay. Always breathe deeply and focus on gradually increasing your range of motion over time.</string>
    <string name="toe_touching_description">The objective of this routine is to be able to touch your toes with straight legs. For the following 28 days do everyday workout 1 or workout 2, you can either choose one and do it every day or change between them. Take a picture of the before and after so you can see the progess made!</string>
    <string name="thirty_day_pancake_with_pnf_and_loaded_stretching_description">Achieving a perfect pancake stretch (where your torso can lay flat between your legs in a seated straddle) requires a combination of passive flexibility, active flexibility, and strength in end ranges. Incorporating PNF (Proprioceptive Neuromuscular Facilitation) and loaded stretching will accelerate your progress by enhancing both your passive and active flexibility while developing strength in deeper ranges of motion.\\n\\n Train 4 times per week for best results, each workout lasts 20-30 minutes.\\n\\nOn week 1 you will build the fundations and introduce PNF Stretching. On week 2 you will introduce deeper loaded stretches. On week 3 you will increase intensity for PNF and loaded stretching and on week 4 you will perform peak training.</string>
    <string name="single_leg_rdl">Single leg RDL</string>
    <string name="deep_split_squat">Deep split squat</string>
    <string name="pancake_stretch">Pancake stretch</string>
    <string name="modified_pigeon_stretch">Modified pigeon stretch</string>
    <string name="standing_hamstring_kick">Standing hamstring kick</string>
    <string name="wide_squat">Wide squat</string>
    <string name="runners_lunge">Runners lunge</string>
    <string name="butterfly_stretch">Butterfly stretch</string>
    <string name="hip_switch_90_90">90/90 Hip Switch</string>
    <string name="standing_pancake">Standing pancake</string>
    <string name="figure_four_stretch">Figure four stretch</string>
</resources>