<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mobify.ui.home.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobify.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_training_plans"
        android:name="com.example.mobify.ui.onboarding.SelectGoalsFragment"
        android:label="@string/menu_training_plans"
        tools:layout="@layout/fragment_select_goals" />

    <fragment
        android:id="@+id/nav_quick_mobility_test"
        android:name="com.example.mobify.ui.quickMobilityTest.IntroductionScreenFragment"
        android:label="@string/quick_mobility_test"
        tools:layout="@layout/fragment_introduction_screen" />
</navigation>