<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_goals_title"
                android:textSize="24sp"
                android:textColor="@color/primaryTextColor"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/goalsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/back"
                    android:layout_marginHorizontal="20dp"
                    android:visibility="gone"
                    android:layout_gravity="bottom|start" />

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/next"
                    android:layout_marginHorizontal="20dp"
                    android:layout_gravity="bottom|end" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>