<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    tools:context=".ui.home.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Top Section -->
        <TextView
            android:id="@+id/your_data_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_data"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="16dp"/>

        <!-- Total exercise days -->
        <TextView
            android:id="@+id/total_exercise_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/total_exercise_days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votes_for_your_flexibility"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <!-- Streaks Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_streak_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_streak"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/current_streak_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_fire"/>

                <TextView
                    android:id="@+id/current_streak_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/longest_streak_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longest_streak"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/longest_streak_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_star"/>

                <TextView
                    android:id="@+id/longest_streak_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>