<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.home.settings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/languageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_title"
        android:textSize="24sp"
        android:textColor="@color/primaryTextColor"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/englishButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/flag_english"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/languageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spanishButton"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/englishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textSize="18sp"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/englishButton"
        app:layout_constraintStart_toStartOf="@+id/englishButton"
        app:layout_constraintEnd_toEndOf="@+id/englishButton" />

    <ImageButton
        android:id="@+id/spanishButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/flag_spanish"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@+id/languageTitle"
        app:layout_constraintStart_toEndOf="@+id/englishButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/spanishText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spanish"
        android:textSize="18sp"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/spanishButton"
        app:layout_constraintStart_toStartOf="@+id/spanishButton"
        app:layout_constraintEnd_toEndOf="@+id/spanishButton" />

</androidx.constraintlayout.widget.ConstraintLayout>